@@ -1,0 +1,61 @@
+##
+# Prologue
+##
+AC_INIT([quota])
+AC_META
+AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_SRCDIR([NEWS])
+AC_CANONICAL_SYSTEM
+
+##
+# Automake support
+##
+AM_INIT_AUTOMAKE($PROJECT, $VERSION)
+AM_CONFIG_HEADER([config/config.h])
+AM_MAINTAINER_MODE
+
+##
+# Checks for programs
+##
+AC_PROG_CC
+AC_PROG_LN_S
+AC_PROG_LIBTOOL
+AM_CONDITIONAL(WITH_GNU_LD, test "$with_gnu_ld" = "yes")
+AC_LIB_LTDL
+
+##
+# Checks for header files.
+##
+AC_HEADER_STDC
+AC_CHECK_HEADERS( \
+  getopt.h \
+)
+
+##
+# Checks for typedefs, structures, and compiler characteristics
+## 
+AC_C_BIGENDIAN
+AC_C_CONST
+
+##
+# Checks for library functions
+##
+AC_CHECK_FUNCS( \
+  getopt_long \
+)
+AC_CHECK_LIB([lustreapi], [llapi_quotactl])
+
+##
+# For list.c
+##
+AC_DEFINE(WITH_LSD_FATAL_ERROR_FUNC, 1, [Define lsd_fatal_error])
+AC_DEFINE(WITH_LSD_NOMEM_ERROR_FUNC, 1, [Define lsd_fatal_error])
+
+##
+# Epilogue
+##
+AC_CONFIG_FILES( \
+  quota.spec \
+  Makefile \
+)
+AC_OUTPUT
