@@ -26,6 +26,9 @@
  * Code to parse the quota.conf file.
  */
 
+#if HAVE_CONFIG_H
+#include "config.h"
+#endif
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
