@@ -22,6 +22,9 @@
  *  59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
 \*****************************************************************************/
 
+#if HAVE_CONFIG_H
+#include "config.h"
+#endif
 #include <ctype.h>
 #include <pwd.h>
 #include <rpc/rpc.h>
